<resources>
    <string name="app_name">travel_rex</string>
    <string name="travel_rex">TravelRex</string>
    <string name="insert_note">Insert note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="login_label">Login</string>
    <string name="sign_in_to_continue">Please sign in to continue</string>
    <string name="name_edit_text">Name</string>
    <string name="location_edit_text">Current location</string>
    <string name="email_edit_text">Email</string>
    <string name="password_edit_text">Password</string>
    <string name="signup_label">Create account</string>
    <string name="user_name">Full name</string>
    <string name="password_edit_text_confirm">Confirm password</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="already_have_an_account_sign_in">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_error_title">sign up error</string>
    <string name="sign_up_error_button">Ok</string>
    <string name="sign_up_error_passwd_diff">Password does not match</string>
    <string name="sign_up_error_passwd_len">Password should be at least 6 characters</string>
    <string name="sign_up_error_invalid_email">Invalid email</string>
    <string name="logout">Logout</string>
    <string name="auth_failed">"Authentication failed: "</string>
    <string name="login_error_empty_email">Email cannot be empty</string>
    <string name="login_error_empty_passwd">Password cannot be empty</string>
    <string name="login_error_title">Login error</string>
    <string name="home_icon_title">Home</string>
    <string name="home_blank_text">No posts to show. Time to start your travel journey!</string>
    <string name="map_icon_title">Map</string>
    <string name="add_icon_title">Add</string>
    <string name="profile_icon_title">Profile</string>
    <string name="profile_currently_in">Currently in: </string>
    <string name="profile_my_passport">My Passport</string>
    <string name="search_for_destination">Destination (City, Country)</string>
    <string name="rating">Rating out of 5</string>
    <string name="post_button_text">Share</string>
    <string name="add_page">Add to:</string>
    <string name="post_title">Title</string>
    <string name="post_description">Description</string>
    <string name="visited_radio_button">Visited</string>
    <string name="want_to_go_radio_button">Want to go</string>
    <string name="feed_header_visited">visited</string>
</resources>