<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128px"
            android:src="@drawable/logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_title"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/travel_rex"
        app:layout_constraintStart_toStartOf="@id/left"
        android:textStyle="bold"
        android:textColor="@color/lightBrown"
        app:layout_constraintTop_toTopOf="@+id/top" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/darkBrown"
        android:gravity="center_horizontal"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/login_title"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:layout_constraintVertical_bias="0" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32px"
        android:background="@color/darkCream"
        android:hint="@string/email_edit_text"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="32px"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintEnd_toStartOf="@id/right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/sign"
        app:layout_constraintTop_toBottomOf="@+id/sign"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16px"
        android:background="@color/darkCream"
        android:hint="@string/password_edit_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="32px"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/user_email"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        app:layout_constraintVertical_bias="0.1" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/baseline_arrow_forward_24"
        android:scaleType="center"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="@+id/right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toLeftOf="@+id/right"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintStart_toEndOf="@+id/left"
        >
        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/don_t_have_an_account_sign_up"
            />
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/sign_up_button_text"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/lightBrown"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>