<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />


    <TextView
        android:id="@+id/form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/left"
        app:layout_constraintTop_toTopOf="@+id/top"
        app:layout_constraintVertical_bias="0" />


    <EditText
        android:id="@+id/new_post_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/post_title"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintEnd_toStartOf="@id/right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/form_title"
        app:layout_constraintTop_toBottomOf="@+id/form_title"
        app:layout_constraintVertical_bias="0.05" />


    <EditText
        android:id="@+id/new_post_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/post_description"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintEnd_toStartOf="@+id/right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/new_post_title"
        app:layout_constraintTop_toBottomOf="@+id/new_post_title"
        app:layout_constraintVertical_bias="0.05" />


    <EditText
        android:id="@+id/search_for_destination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_for_destination"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintEnd_toStartOf="@id/right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/new_post_description"
        app:layout_constraintTop_toBottomOf="@+id/new_post_description"
        app:layout_constraintVertical_bias="0.05" />


    <Button
        android:id="@+id/post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:text="@string/post_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/bottom"
        app:layout_constraintEnd_toEndOf="@+id/right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toLeftOf="@+id/right"
        app:layout_constraintVertical_bias="0.05" />


</androidx.constraintlayout.widget.ConstraintLayout>