<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="15dp"
    tools:context=".HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/cream"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/cream"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                >

                <ImageView
                    android:id="@+id/profileIcon"
                    android:layout_width="150px"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_icon"
                    android:paddingEnd="15dp"/>
"/>

                <LinearLayout
                    android:id="@+id/place_header"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        >
                        <TextView
                            android:id="@+id/postUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingEnd="3dp"
                            android:text="@string/user_name" />
                        <TextView
                            android:id="@+id/feedPostVisted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingEnd="3dp"

                            android:text="@string/feed_header_visited" />
                        <TextView
                            android:id="@+id/txtNameCard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/home_icon_title" />
                    </LinearLayout>
                    <!-- Rating bar styled using source: https://akshayranagujjar.medium.com/how-to-customize-rating-bar-in-android-7837f5fd94d2  -->
                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:rating="3"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:progressTint="#FFCC01"
                        android:id="@+id/txtRatingCard"
                        />
                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/visitedImage"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:src="@drawable/sample_place"
                app:layout_constraintTop_toBottomOf="@+id/place_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDescriptionCard"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/home_icon_title" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="end"
                    >

                    <ImageView
                        android:id="@+id/savePostPlace"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:src="@drawable/pin_icon" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:src="@drawable/reaction_emoji_icon" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>